<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group android:checkableBehavior="single">
        <item
            android:title="@string/nav_order_title"
            >
            <menu>
                <item
                    android:id="@+id/nav_list_current_order"
                    android:title="Đơn hàng mới"
                    android:icon="@drawable/list_order"/>
                <item
                    android:id="@+id/nav_list_accecpted_order"
                    android:title="Đơn đã nhận"
                    android:icon="@drawable/list_order"/>
            </menu>
        </item>

    </group>
    <item android:title="@string/nav_account">
        <menu>
            <item
                android:id="@+id/nav_changeInformation"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/nav_change_info" />
            <item android:title="@string/nav_account_security"
                android:id="@+id/nav_changePass"
                android:icon="@drawable/baseline_lock_person_24"/>
            <item
                android:title="@string/nav_sign_out"
                android:id="@+id/nav_signOut"
                android:icon="@drawable/logout"
                />
        </menu>
    </item>
</menu>